--- a/src/main/java/com/ocp20_thread/MyStockClient.form
+++ b/src/main/java/com/ocp20_thread/MyStockClient.form
@@ -57,6 +57,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="USDTWD=x"/>
       </Properties>
+      <Events>
+        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="symbolLabelKeyPressed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="priceLabel">
       <Properties>
