--- a/src/main/java/food_salety/RiceJFrame.form
+++ b/src/main/java/food_salety/RiceJFrame.form
@@ -3,6 +3,7 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="&#x5e02;&#x552e;&#x7c73;&#x6aa2;&#x9a57;&#x8cc7;&#x6599;"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -81,6 +82,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="&#x67e5;&#x8a62;"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButton2">
       <Properties>
