--- a/src/main/java/food_salety/RiceJFrame.form
+++ b/src/main/java/food_salety/RiceJFrame.form
@@ -104,6 +104,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="&#x532f;&#x5165;"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
       <AuxValues>
